[package]
name = "lockscreen"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.1"
slint-build = "1.4.1"
smithay-client-toolkit = "0.18.1"
wayland-client = "0.31.2"

[build-dependencies]
slint-build = "1.4.1"
